# Matrix

./: .env  .env.example  .gitignore  README.md  pyproject.toml  read  run.sh  run.txt  run_tests.bat  run_tests.sh  start_project.bat  start_project.sh
documents/: architecture_flow.md  high_level_design.md  low_level_design.md
redpill-backend/: .gitignore  chat_history.db  ingest_data.py  matrix.txt  pyproject.toml  requirements.txt  stapp.py
redpill-backend/app/: main.py
redpill-backend/chat/: chat_handler.py
redpill-backend/config/: constants.py
redpill-backend/ingestion/: data_loader.py  document_parser.py
redpill-backend/qdrant_db/: meta.json
redpill-backend/rag/: rag_pipeline.py
redpill-backend/services/: google_chat_service.py  llm_service.py  nvidia_api_service.py  nvidia_chat_service.py  qdrant_service.py
redpill-backend/tests/: test_backend.py
redpill-backend/utils/: common.py  db_manager.py  document_reader.py  rag_manager.py  redis_cache.py  tools.py
redpill-interface/: vite.config.ts.timestamp-1754474710170-6cdf5361ec1dc.mjs
redpill-interface/src/: index.css
redpill-interface/src/components/: ChatInterface.tsx  GraphView.tsx  LoginPage.tsx  MatrixBackground.tsx  TextEditor.tsx
redpill-interface/src/pages/: Index.tsx
